fix slash command toolbar visibility when in modal

--- a/frontend/src/app.less
+++ b/frontend/src/app.less
@@ -28,6 +28,7 @@ mark {
 
 #block-menu-container {
   width: 200px !important;
+  z-index: 1010;
   ol {
     padding: 0 !important;
     li {
